# ai_japan_project

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini
app_ui/: artifact_screen.py  context_screen.py  dashboard_screen.py  screen_utils.py  streamlit_app.py  task_workspace_screen.py  ui_theme.py  workflow_screens.py
docs/: agent-integration.md  architecture.md  main-control.md  operations.md  personal-agent-bridge-spec.md  react-demo-design-brief.md  react-demo-reference-board.md  react-demo-shot-list.md  react-ui-spike.md
project/: 03_context.md  context.yaml
project/skills/: critic.md  pm.md
react_ui/: README.md  index.html  package-lock.json  package.json
react_ui/src/: main.tsx  types.ts
react_ui/src/app/: App.tsx
react_ui/src/app/product-ux/: product.css  productData.ts  types.ts
react_ui/src/app/screens/: ArtifactViewerScreen.tsx  ContextWorkspaceScreen.tsx  DashboardScreen.tsx  WorkflowWorkspaceScreen.tsx
react_ui/src/data/: mockData.ts
react_ui/src/design-system/: base.css  tokens.css
react_ui/src/design-system/components/: ActionPanel.tsx  AppShell.tsx  ArtifactSummary.tsx  Card.tsx  Chip.tsx  (+12 more)
scripts/: ajp_cleanup.py  ajp_readiness.py  ajp_smoke.py  prepare_react_demo_handoff.py  publish_react_demo_outputs.py
src/ai_japan_project/: __init__.py  atlassian.py  factory.py  handoff.py  interfaces.py  models.py  operations.py  paths.py  renderers.py  service.py  settings.py  storage.py
tests/: test_confluence_integration.py  test_foundation.py  test_operations.py  test_settings_dotenv.py  test_workflow.py
(+15 files in other folders)
